Add webpack browserreload

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>表示用のテストHTML</title>
+    <link rel="stylesheet" href="./src/CalenderPicker.css">
   </head>
   <body>
     <h1>これは、カレンダーピッカーの確認用のhtmlです。</h1>
