--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>表示用のテストHTML</title>
+    <title>DEMO|react-ja-date-picker</title>
   </head>
   <body>
-    <h1>これは、カレンダーピッカーの確認用のhtmlです。</h1>
+    <h1>日本語に対応した美しいDatePicker</h1>
+    <p>DatePickerのReactコンポーネントです。</p>
     <div id="app"></div>
     <script src="./bundle.js"></script>
   </body>
