--- a/demo/index.html
+++ b/demo/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>DEMO | react-ja-date-picker</title>
+    <link rel="stylesheet" href="./vendor/normalize.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <h1>日本語に対応した美しいDatePicker</h1>
     <p>DatePickerのReactコンポーネントです。</p>
-    <div id="app"></div>
+    <h2>default</h2>
+    <div id="calendar-default"></div>
+    <h2>リンク</h2>
+    <div id="calendar-link"></div>
+    <h2>ボタン</h2>
+    <div id="calendar-button"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
