style demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>DEMO | react-ja-date-picker</title>
-    <link rel="stylesheet" href="./vendor/normalize.css">
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>DEMO | react-ja-date-picker</title>
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+  <div class="wrap">
     <h1>日本語に対応した美しいDatePicker</h1>
-    <p>DatePickerのReactコンポーネントです。</p>
-    <h2>default</h2>
-    <div id="calendar-default"></div>
-    <h2>リンク</h2>
-    <div id="calendar-link"></div>
-    <h2>ボタン</h2>
-    <div id="calendar-button"></div>
+    <p>
+      DatePickerのReactコンポーネントです。
+    </p>
+    <p>
+      <a href="https://github.com/ai-ot/react-ja-date-picker" class="link-button">view source</a>
+    </p>
+
+    <div class="flex">
+      <div class="flex-box">
+        <h2>default</h2>
+        <div id="calendar-default"></div>
+      </div>
+      <div class="flex-box">
+        <h2>リンク</h2>
+        <div id="calendar-link"></div>
+      </div>
+      <div class="flex-box">
+        <h2>ボタン</h2>
+        <div id="calendar-button"></div>
+      </div>
+    </div>
     <script src="./bundle.js"></script>
-  </body>
+  </div>
+</body>
 </html>
