--- a/demo/index.html
+++ b/demo/index.html
@@ -7,30 +7,43 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="wrap">
-    <h1>日本語に対応した美しいDatePicker</h1>
-    <p>
-      DatePickerのReactコンポーネントです。
-    </p>
-    <p>
-      <a href="https://github.com/ai-ot/react-ja-date-picker" class="link-button">view source</a>
-    </p>
+  <div class="container">
+  <div class="wrap content">
+    <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
-    <div class="flex">
+    <section>
+      <h1>日本語に対応した美しいDatePicker</h1>
+      <p>
+        DatePickerのReactコンポーネントです。
+      </p>
+      <p>
+        <a href="https://github.com/ai-ot/react-ja-date-picker" class="link-button">view source</a>
+      </p>
+    </section>
+
+    <section class="flex">
       <div class="flex-box">
         <h2>default</h2>
         <div id="calendar-default"></div>
       </div>
       <div class="flex-box">
-        <h2>リンク</h2>
+        <h2>リンクモード</h2>
         <div id="calendar-link"></div>
       </div>
       <div class="flex-box">
-        <h2>ボタン</h2>
+        <h2>ボタンモード</h2>
         <div id="calendar-button"></div>
       </div>
     </div>
     <script src="./bundle.js"></script>
-  </div>
+  </section>
+
+  <footer>
+    <div class="wrap">
+      <span class="small">built by  </span><a href="http://www.ai-ot.com/" target="_blank"><img src="http://www.ai-ot.com/images/logo.svg" alt="logo" class="logo"></a>
+    </div>
+  </footer>
+
+    </div>
 </body>
 </html>
