--- a/demo/index.html
+++ b/demo/index.html
@@ -30,6 +30,27 @@
         <div id="calendar-button"></div>
       </div>
     </div>
+
+    <h2>インストール</h2>
+    <pre class="shell">
+      $ npm install -S react-ja-date-picker
+    </pre>
+
+    <h2>使い方</h2>
+
+    <pre class="jsx">
+      import React      from 'react'
+      import { render } from 'react-dom'
+      import DatePicker from 'react-ja-date-picker'
+
+      render(
+         &lt;DatePicker /&gt;,
+        document.getElementById('app')
+      )
+    </pre>
+
+    <p>``</p>
+
     <script src="./bundle.js"></script>
   </div>
 </body>
