--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,25 @@
 <html>
 <head>
   <meta charset="utf-8">
+
+  <!-- begin OGP -->
+  <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png"> 
+  <meta property="og:locale" content="ja_JP"> 
+  <meta property="og:type" content="website"> 
+  <meta property="og:title" content="DEMO | react-ja-date-picker"> 
+  <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。"> 
+  <meta property="og:url" content="https://github.com/ai-ot/react-ja-date-picker"> 
+  <meta property="og:site_name" content="react-ja-date-picker"> 
+
+  <!-- google -->
+  <meta name="Description" CONTENT="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。">
+  <meta name="keywords" content="React,日本語,DatePicker,カレンダー"> 
+
+  <!-- twitter -->
+  <meta name="twitter:card" content="summary_large_image"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- end OGP -->
+
   <title>DEMO | react-ja-date-picker</title>
   <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./style.css">
