--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,8 @@
 
   <!-- begin OGP -->
   <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png"> 
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="300" />
   <meta property="og:locale" content="ja_JP"> 
   <meta property="og:type" content="website"> 
   <meta property="og:title" content="DEMO | react-ja-date-picker"> 
