--- a/demo/index.html
+++ b/demo/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
 
   <!-- begin OGP -->
-  <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png"> 
+  <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png">
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="300" />
-  <meta property="og:locale" content="ja_JP"> 
-  <meta property="og:type" content="website"> 
-  <meta property="og:title" content="DEMO | react-ja-date-picker"> 
-  <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。"> 
-  <meta property="og:url" content="https://github.com/ai-ot/react-ja-date-picker"> 
-  <meta property="og:site_name" content="react-ja-date-picker"> 
+  <meta property="og:locale" content="ja_JP">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="DEMO | react-ja-date-picker">
+  <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。">
+  <meta property="og:url" content="https://github.com/ai-ot/react-ja-date-picker">
+  <meta property="og:site_name" content="react-ja-date-picker">
 
   <!-- google -->
   <meta name="Description" CONTENT="日本語に対応した美しいDatePickerのReactコンポーネントです。">
@@ -35,12 +35,8 @@
         <h1>日本語に対応した美しいDatePicker</h1>
         <p>DatePickerのReactコンポーネントです。</p>
         <p>
-          <a href="https://travis-ci.org/ai-ot/react-ja-date-picker">
-            <img src="https://travis-ci.org/ai-ot/react-ja-date-picker.svg?branch=master" alt="build status">
-          </a>
-          <a href="https://www.npmjs.com/package/react-ja-date-picker">
-            <img src="https://img.shields.io/npm/v/react-ja-date-picker.svg" alt="npm version">
-          </a>
+          <a href="https://travis-ci.org/ai-ot/react-ja-date-picker"><img src="https://travis-ci.org/ai-ot/react-ja-date-picker.svg?branch=master" alt="build status" /></a>
+          <a href="https://www.npmjs.com/package/react-ja-date-picker"><img src="https://img.shields.io/npm/v/react-ja-date-picker.svg" alt="npm version" /></a>
         </p>
         <p><a href="https://github.com/ai-ot/react-ja-date-picker" class="link-button">view source</a></p>
       </section>
