--- a/demo/index.html
+++ b/demo/index.html
@@ -7,12 +7,12 @@
   <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png">
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="224" />
-  <meta property="og:locale" content="ja_JP"> 
-  <meta property="og:type" content="website"> 
-  <meta property="og:title" content="DEMO | react-ja-date-picker"> 
-  <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。"> 
-  <meta property="og:url" content="https://github.com/ai-ot/react-ja-date-picker"> 
-  <meta property="og:site_name" content="react-ja-date-picker"> 
+  <meta property="og:locale" content="ja_JP">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="DEMO | react-ja-date-picker">
+  <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。">
+  <meta property="og:url" content="https://ai-ot.github.io/react-ja-date-picker/">
+  <meta property="og:site_name" content="react-ja-date-picker">
 
   <!-- google -->
   <meta name="Description" CONTENT="日本語に対応した美しいDatePickerのReactコンポーネントです。">
