--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="DEMO | react-ja-date-picker">
   <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。">
   <meta property="og:url" content="https://ai-ot.github.io/react-ja-date-picker/">
-  <meta property="og:site_name" content="react-ja-date-picker">
+  <meta property="og:site_name" content="DEMO | react-ja-date-picker">
 
   <!-- google -->
   <meta name="Description" CONTENT="日本語に対応した美しいDatePickerのReactコンポーネントです。">
