--- a/demo/index.html
+++ b/demo/index.html
@@ -2,26 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-
-  <!-- begin OGP -->
-  <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png">
-  <meta property="og:image:width" content="600" />
-  <meta property="og:image:height" content="224" />
-  <meta property="og:locale" content="ja_JP">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="DEMO | react-ja-date-picker">
-  <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。">
-  <meta property="og:url" content="https://ai-ot.github.io/react-ja-date-picker/">
-  <meta property="og:site_name" content="DEMO | react-ja-date-picker">
-
-  <!-- google -->
-  <meta name="Description" CONTENT="日本語に対応した美しいDatePickerのReactコンポーネントです。">
-  <meta name="keywords" content="React,日本語,DatePicker,カレンダー">
-
-  <!-- twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- end OGP -->
+  <meta property="og:title" content="DEMO | React Ja DatePicker" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ai-ot.github.io/react-ja-date-picker/" />
+  <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png" />
 
   <title>DEMO | react-ja-date-picker</title>
   <link rel="stylesheet" href="./vendor/normalize.css">
