--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ai-ot.github.io/react-ja-date-picker/" />
   <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png" />
+  <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。">
 
   <title>DEMO | react-ja-date-picker</title>
   <link rel="stylesheet" href="./vendor/normalize.css">
