--- a/demo/index.html
+++ b/demo/index.html
@@ -2,14 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-
-  <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png">
-  <meta property="og:locale" content="ja_JP">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="DEMO | react-ja-date-picker">
-  <meta property="og:description" content="日本語に対応した美しいDatePickerのReactコンポーネントです。">
-  <meta property="og:url" content="https://github.com/ai-ot/react-ja-date-picker">
-  <meta property="og:site_name" content="react-ja-date-picker">
+  <meta property="og:title" content="DEMO | React Ja DatePicker" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ai-ot.github.io/react-ja-date-picker/" />
+  <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png" />
+  <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。">
 
   <!-- google -->
   <meta name="Description" CONTENT="日本語に対応した美しいDatePickerのReactコンポーネントです。">
