--- a/demo/index.html
+++ b/demo/index.html
@@ -6,17 +6,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ai-ot.github.io/react-ja-date-picker/" />
   <meta property="og:image" content="https://ai-ot.github.io/react-ja-date-picker/img/og.png" />
-  <meta property="og:description" content="日本語に対応した美しいDatePicker DatePickerのReactコンポーネントです。">
-
-  <!-- google -->
-  <meta name="Description" CONTENT="日本語に対応した美しいDatePickerのReactコンポーネントです。">
-  <meta name="keywords" content="React,日本語,DatePicker,カレンダー">
-
-  <!-- twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- end OGP -->
-
+  <meta property="og:description" content="日本語に対応した美しいDatePickerのReactコンポーネントです。">
   <title>DEMO | react-ja-date-picker</title>
   <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./vendor/atom-one-dark.css">
